<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Basics -->
    <string name="app_name" translatable="false">CarCharge</string>
    <string name="app_home">Home</string>
    <string name="app_history">History</string>
    <string name="app_map">Map</string>
    <string name="app_preferences">Preferences</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome_back">Welcome back</string>
    <string name="uninitialized">Not initialized</string>
    
    <!-- Login -->
    <string name="login_email">E-mail:</string>
    <string name="login_password">Password:</string>
    <string name="login_button_log_in">Log in</string>
    <string name="login_title_login">CarCharge Login</string>
    <string name="login_error_hint">Cannot be empty</string>
    <string name="login_or">or</string>
    
    <!-- Home -->
    <string name="home_vehicle_picture_desc">vehicle picture</string>
    <string name="home_voltage">Voltage</string>
    <string name="home_target_voltage">Target Voltage</string>
    <string name="home_current">Current</string>
    <string name="home_max_current">Max. Current</string>
    <string name="home_charging_time">Charging Time</string>
    <string name="home_remaining_time">Remaining Time</string>
    <string name="home_location">Vehicle Location</string>
    <string name="home_range">Range</string>
    <string name="home_fuel">Fuel</string>
    <string name="home_outdoor_temperature">Outdoor\nTemperature</string>
    <string name="home_indoor_temperature">Indoor\nTemperature</string>
    <string name="home_desired_temperature">Desired\nTemperature</string>
    <string name="home_state_loading">Loading</string>
    <string name="home_state_unknown">Unknown state</string>
    <string name="home_state_charging">Charging</string>
    <string name="home_state_off">Off</string>
    <string name="home_state_idle">Idle</string>
    <string name="home_state_driving">Driving</string>
    <string name="home_connectivity_icon_desc">connection type icon</string>
    <string name="home_connectivity_connected_via">Connected via:</string>
    <string name="home_connectivity_updated">Updated:</string>
    
    <!-- History -->
    <string name="history_title">Charging history</string>
    <string name="history_period_from">Period from:</string>
    <string name="history_period_to">Period to:</string>
    <string name="history_button_load">Load</string>
    <string name="history_graph_charge_level">Charge level</string>
    <string name="history_graph_current">Current</string>
    <string name="history_graph_nodata">Data not loaded.</string>
    
    <!-- Preferences -->
    <string name="not_set" msgid="6573031135582639649">Not set</string>
    <string name="preferences_language">Language</string>
    <string name="preferences_about" translatable="false">This application is a client for EV-IoT-Kit project. \nMartin Timko\nGlobalLogic Slovakia s.r.o.\nKMIKT FEIT UNIZA\n© 2021</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_unloaded">unloaded</string>
    <string name="preferences_set">Set</string>
    <string name="preferences_not_set">Not set</string>
    <string name="preferences_easter_egg" translatable="false">You found my Easter Egg! 😮♥</string>
    <string name="preferences_browse_github">Browse GitHub</string>
    <string name="preferences_contact_developer">Contact developer</string>
    <string name="preferences_contact_developer_summary">Feel free to contact me!</string>
    <string name="preferences_choose_email_client">Choose an email client</string>
    <string name="preferences_category_general">General</string>
    <string name="preferences_invalidate_cache">Invalidate cache</string>
    <string name="preferences_category_vehicle">Vehicle</string>
    <string name="preferences_vehicle_name">Vehicle name</string>
    <string name="preferences_vehicle_regplate">Registration plate</string>
    <string name="preferences_image">Image</string>
    <string name="preferences_user">User</string>
    <string name="preferences_logout">Logout</string>
    <string name="preferences_update_interval">Update frequency (mins)</string>
    <string name="preferences_save">Save</string>
    <string name="preferences_category_about">About</string>
    <string name="preferences_nickname">User name</string>
    <string name="preferences_use_FCM">Use Firebase Cloud Messaging</string>
    <string name="preferences_fcm_token" translatable="false">FCM token</string>
    <string name="preferences_toast_nickname_update_success">Nickname successfully updated online.</string>
    <string name="preferences_toast_nickname_update_failed">Updating nickname online failed.</string>
    <string name="preferences_toast_vehicle_update_success">Vehicle successfully updated online.</string>
    <string name="preferences_toast_vehicle_update_failed">Updating vehicle online failed.</string>
    <string name="preferences_logout_dialog">Are you sure you want to log-out?</string>
    <string name="preferences_invalidate_cache_dialog">Cache deleted successfully.</string>
    <string name="preferences_debug_enabled" translatable="false">Debug</string>
    <string name="preferences_vehicle_max_voltage">Battery max voltage</string>
    <string name="preferences_volts">volts</string>
    
    <!-- Other -->
    <string name="appbar_fab_description">main action button</string>
    <string name="appbar_refresh">Refresh</string>
    <string name="appbar_preferences">Preferences</string>
    <string name="appbar_history">History</string>
    <string name="pairing_new_vehicle">Register a new vehicle</string>
    <string name="pairing_new_vehicle_id">vehicle id</string>
    <string name="pairing_pair">Pair</string>
    <string name="toast_fcm_update">Received FCM update</string>
    <string name="toast_refreshed">Refreshed.</string>
    <string name="toast_refresh_fail">Refresh failed.</string>
    <string name="map_toast_location_access_not_granted">Location access not granted.</string>
    <string name="notification_charge_completed">Charging completed</string>
    <string name="notification_charge_completed_cont">Your %1$s charge level has reached the desired level (%2$d%%).</string>
    <string name="notification_charge_to_100">Charge to 100%</string>
    <string name="bottomsheet_last_status">Last status:</string>
    <string name="bottomsheet_last_status_unknown">unknown</string>

</resources>