<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <com.martin.carcharge.ui.overrides.FirstPreferenceCategory
        android:title="@string/preferences_user"
        app:iconSpaceReserved="false">

    <EditTextPreference
            android:id="@+id/preference_user"
            android:key="user_nickname"
            android:title="Martin Timko"
            android:dialogTitle="@string/preferences_nickname"
            android:summary="@string/preferences_unloaded"
            android:persistent="false"
            app:positiveButtonText="@string/preferences_save" />
        
        <Preference
            android:id="@+id/preference_logout"
            android:key="logout"
            android:title="@string/preferences_logout"
            android:icon="@drawable/ic_logout">
        </Preference>
    </com.martin.carcharge.ui.overrides.FirstPreferenceCategory>
    
    <PreferenceCategory
        app:title="@string/preferences_category_general"
        app:iconSpaceReserved="false">

    <ListPreference
            android:id="@+id/preference_language"
            android:key="language"
            android:title="@string/preferences_language"
            android:icon="@drawable/ic_language"
            android:entries="@array/languages_entries"
            android:entryValues="@array/languages_values"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="true" />
    
        <SwitchPreference
            android:id="@+id/preference_fcmEnabled"
            android:key="fcm_enabled"
            android:title="@string/preferences_use_FCM"
            android:icon="@drawable/ic_send"
            android:defaultValue="false"
            android:disableDependentsState="true" />
        
        <SeekBarPreference
            android:id="@+id/preference_updateInterval"
            android:key="update_interval"
            android:title="@string/preferences_update_interval"
            android:icon="@drawable/ic_refresh"
            android:max="60"
            android:defaultValue="5"
            android:dependency="fcm_enabled"
            app:isPreferenceVisible="true"
            app:showSeekBarValue="true" />
    
        <Preference
            android:id="@+id/preference_invalidateCache"
            android:key="invalidate_cache"
            android:title="@string/preferences_invalidate_cache"
            android:icon="@drawable/ic_database_delete" />
    
        <SwitchPreference
            android:id="@+id/preference_debug"
            android:key="debug"
            android:title="@string/preferences_debug_enabled"
            android:defaultValue="false" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        app:title="@string/preferences_category_vehicle"
        app:iconSpaceReserved="false">

    <EditTextPreference
            android:id="@+id/preference_vehicleName"
            android:key="vehicle_name"
            android:title="@string/preferences_vehicle_name"
            android:icon="@drawable/ic_vehicle"
            android:persistent="false"
            app:positiveButtonText="@string/preferences_save"
            app:useSimpleSummaryProvider="true" />
    
        <EditTextPreference
            android:id="@+id/preference_vehicleRegplate"
            android:key="vehicle_regplate"
            android:title="@string/preferences_vehicle_regplate"
            android:icon="@drawable/ic_regplate"
            android:persistent="false"
            app:positiveButtonText="@string/preferences_save"
            app:useSimpleSummaryProvider="true" />
    
        <EditTextPreference
            android:id="@+id/preference_vehicleMaxVoltage"
            android:key="vehicle_max_voltage"
            android:title="@string/preferences_vehicle_max_voltage"
            android:icon="@drawable/ic_battery"
            android:persistent="false"
            app:positiveButtonText="@string/preferences_save"
            app:useSimpleSummaryProvider="true"
            android:enabled="false" />
    
        <Preference
            android:id="@+id/preference_vehicleImage"
            android:key="vehicle_image"
            android:title="@string/preferences_image"
            android:summary="@string/preferences_not_set"
            android:icon="@drawable/ic_image"/>
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/preferences_category_about"
        app:iconSpaceReserved="false">
        
        <Preference
            android:id="@+id/preference_about"
            android:title="@string/preferences_about"
            android:enabled="false"
            app:iconSpaceReserved="false" />
        
        <Preference
            android:id="@+id/preference_version"
            android:key="app_version"
            android:title="@string/preferences_version"
            android:summary="@string/preferences_unloaded"
            app:iconSpaceReserved="false" />
    
        <Preference
            android:id="@+id/preference_fcmToken"
            android:key="fcm_token"
            android:title="@string/preferences_fcm_token"
            android:summary="@string/preferences_unloaded"
            android:enabled="false"
            app:iconSpaceReserved="false" />
        
        <Preference
            android:id="@+id/preference_github"
            android:title="@string/preferences_browse_github"
            app:iconSpaceReserved="false">
            
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/m4rtin195/Reciper" />
        </Preference>
        
        <Preference
            android:id="@+id/preference_contact"
            android:key="contact_developer"
            android:title="@string/preferences_contact_developer"
            android:summary="@string/preferences_contact_developer_summary"
            app:iconSpaceReserved="false">
        </Preference>
    
        <Preference android:selectable="false" />
    </PreferenceCategory>

</PreferenceScreen>