<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ListPreference
        android:id="@+id/language"
        android:defaultValue="system"
        android:entries="@array/languages_entries"
        android:entryValues="@array/languages_values"
        android:key="language"
        android:title="@string/preferences_language"
        android:icon="@drawable/ic_translate"
        app:useSimpleSummaryProvider="true" />
    
    <SwitchPreference
        android:id="@+id/helper"
        android:defaultValue="false"
        android:key="helper"
        android:title="Helper" />
    
    <EditTextPreference
        android:defaultValue="5"
        android:key="edit_text_preference_1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Update frequency"
        app:useSimpleSummaryProvider="true"/>
    
    <PreferenceCategory
        android:id="@+id/category_converter"
        app:title="Category">
    
        <!--<com.martin.carcharge.ui.NumberPickerPreference
            android:key="refreshrate"
            android:title="Update frequency"
            android:defaultValue="20"
            app:maxValue="300"
            app:minValue="3"/>-->
        
    </PreferenceCategory>
    
    
    
    
    <PreferenceCategory
        android:id="@+id/category_about"
        android:title="About">
        
        <Preference
            android:id="@+id/about"
            android:selectable="false"
            android:enabled="false"
            android:title="@string/preferences_about" />
        
        <Preference
            android:id="@+id/version"
            android:title="@string/preferences_version"
            android:summary="@string/preferences_unloaded"
            android:key="version" />
        
        <Preference
            android:id="@+id/github"
            android:title="@string/preferences_browse_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/m4rtin195/Reciper" />
        </Preference>
        
        <Preference
            android:id="@+id/contact"
            android:title="@string/preferences_contact_developer"
            android:summary="@string/preferences_contact_developer_summary"
            android:key="contact_developer">
            <!-- resp static intent-->
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>