<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.martin.carcharge.ui.home.HomeFragment"
        android:label="@string/app_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/navigation_action_home_to_history"
            app:destination="@id/navigation_history" />
        <action
            android:id="@+id/navigation_action_home_to_preferences"
            app:destination="@id/navigation_preferences" />
        <action
            android:id="@+id/navigation_action_home_to_map"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.martin.carcharge.ui.history.HistoryFragment"
        android:label="@string/app_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/navigation_action_history_self"
            app:destination="@id/navigation_history" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.martin.carcharge.ui.MapFragment"
        android:label="@string/app_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/navigation_action_map_self"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.martin.carcharge.ui.preferences.PreferencesFragment"
        android:label="@string/app_preferences"
        tools:layout="@layout/fragment_preferences" >
        <action
            android:id="@+id/navigation_action_preferences_self"
            app:destination="@id/navigation_preferences" />
    </fragment>
</navigation>